Updated ERDs (and Docker compose files accordingly)

--- a/datajoint_njm2149/docker-compose.yml
+++ b/datajoint_njm2149/docker-compose.yml
@@ -7,5 +7,6 @@ services:
             - .:/src/datajoint-njm2149
             - ./pacman:/pacman
             - /srv/locker/churchland:/srv/locker/churchland
+            - ./images:/images
         ports:
             - "8900:8888"
