--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,15 @@ bokeh>=1.2
 colorcet
 datajoint>=0.12
 GitPython
-python-dotenv
 holoviews
 jupyter-dash
+kaleido
 matplotlib
 neo>=0.8.0
 numpy>=1.16.4
 pandas>=0.24.2
-plotly>=4.1.0
+plotly>4.9.0
+python-dotenv
 scikit-learn>=0.21.2
 scipy>=1.3.0
 seaborn>=0.10.0
