--- a/.env_template
+++ b/.env_template
@@ -1,4 +1,4 @@
-DJ_HOST="HOST_ADDRESS"
-DJ_USER="USER_NAME"
-DJ_PASS="PASSWORD"
-MODE="sandbox"
+DJ_HOST="datajoint.u19motor.zi.columbia.edu"
+DJ_USER="eaa2164"
+DJ_PASS="Ea@27294271"
+MODE="Elom"
